Started model access

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,20 +1,13 @@
 sqlserver = {
-
   driver = "slick.jdbc.SQLServerProfile$"
-
   db {
-
+    driver = "com.microsoft.sqlserver.jdbc.SQLServerDriver"
     host = localhost
-
     port = 1443
-
     databaseName = TrabajoGI1819
 
     url ="jdbc:sqlserver://localhost:1433;database=TrabajoGI1819"
     user = SA
-
     password = examplePass-
-
   }
-
 }
